--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "stripe": "^18.0.0"
   }
 }
