--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript-eslint": "^8.15.0"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
